<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vlantion.travelexperts8.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.vlantion.travelexperts8.ui.customer.CustomerFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_customer" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.vlantion.travelexperts8.ui.booking.BookingFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_booking" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.vlantion.travelexperts8.ui.Package.PackageFragment"
        android:label="@string/menu_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.vlantion.travelexperts8.ui.supplier.SupplierFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_supplier" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.vlantion.travelexperts8.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>